--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
+body{
+    background-color:#141414;
+    color: #ffffff;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar{
+    display: none;
+}    
+.movie-app{
+    overflow-x: auto;  
+    flex-wrap: nowrap;
+    color: #fff;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card:hover{
+    box-shadow: 0 4px 12px 0 #fff ;   
+    cursor: pointer;
+    
 }
